; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/tcpip/tcpip/extr_info.c_InfoCopyOut.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/tcpip/tcpip/extr_info.c_InfoCopyOut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TDI_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InfoCopyOut(i64 %0, i64 %1, i32 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  %11 = load i64*, i64** %9, align 8
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %10, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64*, i64** %9, align 8
  store i64 %13, i64* %14, align 8
  %15 = load i64, i64* %10, align 8
  %16 = load i64, i64* %7, align 8
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %21, label %18

18:                                               ; preds = %4
  %19 = load i32, i32* %8, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %18, %4
  %22 = load i32, i32* @TDI_SUCCESS, align 4
  store i32 %22, i32* %5, align 4
  br label %29

23:                                               ; preds = %18
  %24 = load i32, i32* %8, align 4
  %25 = load i64, i64* %6, align 8
  %26 = load i64, i64* %7, align 8
  %27 = call i32 @CopyBufferToBufferChain(i32 %24, i32 0, i64 %25, i64 %26)
  %28 = load i32, i32* @TDI_SUCCESS, align 4
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %23, %21
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @CopyBufferToBufferChain(i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
